[package]
name = "rtt_rs"
version = "0.2.3"
authors = ["chenhonglinchl <chenhonglinchl@aliyun.com>"]
edition = "2018"
description = "rtthread supprot library"
license = "MIT"

[dependencies]
bitfield = "0.13.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
atomic-polyfill = "0.1.3"

[features]

default = ["device", "fs", "net"]

rt-smart = []

device = []
fs = []
net = []